イマジン・ヨコハマのプロジェクトページを追加

--- a/_posts/2021-08-10-post.md
+++ b/_posts/2021-08-10-post.md
@@ -1,5 +1,5 @@
 ---
-title: 横浜市交通局による映像コンテスト開催を支援しました。
+title: 横浜市交通局による映像コンテスト開催を支援しました
 date: 2021-08-10
 description: 
 image: /images/posts/c4y_baysideblue_2021-08-10.jpeg
