デジタル化推進特別委員会への協力の記事の修正

--- a/_posts/2022-05-18-post.md
+++ b/_posts/2022-05-18-post.md
@@ -7,8 +7,6 @@ categories:
     - Activities
     - Meeting
 ---
-# 「横浜市のペーパーレス及びオンライン会議の実施状況について」アンケート
-
 デジタル化推進特別委員会において、横浜市全職員を対象に「横浜市のペーパーレス及びオンライン会議の実施状況について」のアンケートが実施されました。
 Code for YOKOHAMAでは、アンケートフォームの設計と、アンケートの回答の分析を支援しました。
 
@@ -23,17 +21,13 @@ Code for YOKOHAMAでは、アンケートフォームの設計と、アンケー
 
 - [「横浜市のペーパーレス及びオンライン会議の実施状況について」アンケート分析レポート](https://public.tableau.com/views/_16314601284130/1_?:language=en-US&:display_count=n&:origin=viz_share_link)
 
-
-# ディスカッション
-2021年11月10日（水）14:45-17:00にインフォ・ラウンジ株式会社において、デジタル化推進特別委員会の皆さんとCode for YOKOHAMAのメンバーでアンケート分析結果の確認と今後のデジタル化推進に向けたディスカッションを行いました。
+また、2021年11月10日（水）14:45-17:00にインフォ・ラウンジ株式会社において、デジタル化推進特別委員会の皆さんとCode for YOKOHAMAのメンバーでアンケート分析結果の確認と今後のデジタル化推進に向けたディスカッションを行いました。
 
 ![](/images/posts/img_local_council_2021_1.jpg)
 ![](/images/posts/img_local_council_2021_2.jpg)
 ![](/images/posts/img_local_council_2021_3.jpg)
 ![](/images/posts/img_local_council_2021_4.jpg)
 ![](/images/posts/img_local_council_2021_5.jpg)
-
-# デジタル化推進特別委員会に関する情報
 
 デジタル化推進特別委員会の詳細や、本取り組みを通して取りまとめられた提言書はこちらからご覧頂けます。
 
